--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,15 @@ add_executable(treeman main.cpp
         src/interface/App/App.h
         src/interface/Canvas/Canvas.cpp
         src/interface/Canvas/Canvas.h
-        src/trees/Node.h)
+        src/trees/Node.h
+        src/trees/CartesianTree/CartesianTree.cpp
+        src/trees/CartesianTree/CartesianTree.h
+        src/header.h
+        src/trees/SplayTree/SplayTree.h
+        src/trees/SplayTree/SplayTree.cpp
+        src/trees/AvlTree/AvlTree.cpp
+        src/trees/AvlTree/AvlTree.h
+)
 target_link_libraries(treeman
         Qt5::Core
         Qt5::Gui
